[project]
name = "reinforcement-learning-tp4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari,classic-control,other]>=1.2.2",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
